5th march changes

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -1,15 +1,14 @@
-@misc{kemp,
-	etitle   = {Load Balancing Algorithms and Techniques.},
-	url      = {\url{https://kemptechnologies.com/load-balancer/load-balancing-algorithms-techniques}},
-    accessed = {04.01.2024},
+@misc{ruscorpora,
+	etitle   = {Национальный корпус русского языка},
+	url      = {\url{https://ruscorpora.ru}},
+    accessed = {01.03.2024},
 }
 
-@inbook{haproxy,
-   bookauthor = {Nick Ramirez},
-   booktitle = {Load Balancing with HAProxy: Open-Source Technology for Better Scalability, Redundancy and Availability in Your IT Infrastructure},
-   publisher = {-- Nick Ramirez, 2016 -- 172 c.},
-   isbn = {9781519073846},
-   language = {english},
+@inbook{kl,
+   bookauthor = {В.П. Захаров and С.Ю. Богданова},
+   note = {Корпусная лингвистика: Учебник для студентов направления <<Лингвистика>>. 2-е изд., перераб. и дополн., -- СПб.: СПбГУ. РИО. Филологический факультет, 2013. -- 148 с.},
+   isbn = {978-5-88267-316-0},
+   language = {russian},
 }
 
 @article{realphong,
