--- a/docs/main.tex
+++ b/docs/main.tex
@@ -19,7 +19,7 @@
 % \include{report/03-technological}
 % \include{report/04-research}
 % \include{report/05-conclusion}
-% \include{report/06-bibliography}
+\include{report/06-bibliography}
 
 % \include{report/appendix-a}
 % \include{report/appendix-b}
