--- a/docs/report/01-analytical.tex
+++ b/docs/report/01-analytical.tex
@@ -1,16 +1,106 @@
 \section{Аналитическая часть}
 
+В данной части вводятся понятия корпусов текстов и текстовых разметок.
+Анализируются основные виды текстовых корпусов, текстовых разметок и их структура.
+Описывается структура технических текстов, и рассматривается связанная с ними проблематика.
+
 \subsection{Корпуса текстов}
 
-% Какими бывают
+% По одному из определений, под корпусом текстов понимается большой унифицированный, структурированный, размеченный, филологически компетентный массив языковых данных, предназначенный для решения конкретных лингвистических задач \cite{kl}.
+
+% В данном разделе дается определение корпусу текстов, TODO
+
+По Т. МакЭнери и Э. Вилсону, под корпусом текстов понимается {собрание языковых фрагментов, отобранных в соответствии с четкими языковыми критериями для использования в качестве модели языка} \cite{kl}.
+
 % Зачем нужны
+\subsubsection{Применения}
+
+Корпуса текстов используются для различных лингвистических, образовательных и технологических целей, например, для выявления закономерностей в языке, анализа структуры технических текстов, обработки естесственного языка, составления словарей или интерактивного обучения языку.
+
+% Корпуса текстов используются в различных сферах человеческой деятельности:
+% \begin{itemize}
+%     \item Лингвистика и языкознание;
+%     \item Машинный перевод;
+%     \item Разработка систем обработки естественного языка (англ. NLP, Natural Language Processing);
+%     \item Обучение языкам;
+%     \item Составление словарей;
+%     \item Социолингвистика.
+% \end{itemize}
+
+% Какими бывают
+\subsubsection{Типы и классификация}
+
+Различают несколько типов текстовых корпусов по степени <<универсальности>> \cite{kl}:
+\begin{enumerate}
+    \item корпусы первого типа --- универсальные, отражают в себе все многообразие речевой деятельности;
+    \item корпусы второго типа --- специфичные, создаваемые для специальной цели, отражают некоторое языковое или культурное явление в общественной речевой практике, например, корпус пословиц или анекдотов;
+    \item корпусы третьего типа --- специфичные, создаваемые для решения специальной задачи, например, для отладки систем машинного перевода.
+\end{enumerate}
+
+Текстовые корпуса различают и по другим признакам.
+Некоторые из них представлены ниже, в таблице \ref{tab:coc}.
+\begin{table}[H]
+\centering
+        \caption{Классификация корпусов \cite[с. 16]{kl}}
+		\label{tab:coc}
+        \begin{adjustbox}{width=1\textwidth}
+            \begin{tabular}{|p{0.3\textwidth}|p{0.7\textwidth}|}
+        \hline
+        Признак & Тип корпуса \\
+        \hline
+        \hline
+        Цель & многоцелевые, специализированные \\
+        \hline
+        Тип языковых данных & письменные, устные (речевые), смешанные \\
+        \hline
+        <<Литературность>> & литературные, диалектные, разговорные, терминологические, смешанные \\
+        \hline
+        Жанр & литературные, фольклорные, драматургические, публицистические \\
+        \hline
+        Назначение & исследовательские, иллюстративные \\
+        \hline
+        Динамичность & динамические, статические \\
+        \hline
+        Разметка & размеченные, неразмеченные \\
+        \hline
+        Характер разметки & морфологические, синтаксические, семантические, анафорические и т. д. \\
+        \hline
+        Доступность & свободно доступные, коммерческие, закрытые \\
+        \hline
+        Объем текстов & полнотекстовые, <<фрагментнотекстовые>> \\
+        \hline
+		\end{tabular}
+        \end{adjustbox}
+\end{table}
+
 % Как устроены
+\subsubsection{Устройство}
 
 \subsection{Тексты}
 
 % Виды текстовых разметок (?)
+\subsubsection{Виды текстовых разметок}
+
 % Структуру технических и проблемы в них
+\subsubsection{Структура технических текстов и проблемы}
+
 % Проблема терминов
+\subsubsection{Проблема терминов}
+
+Терминология русского языка складывалась и продолжает складываться на основе англоязычной терминологии.
+Иногда получается, что давно существующий в русском языке термин приобретает новое значение, заимствованное из английского.
+Так, например, слово <<корпус>> приобрело новое значение от английского <<corpus>> --- {сборник текстов} \cite{kl}.
+В связи с этим, при разметке текстов, возникают трудности при сопоставлении терминов из одного языка с терминами другого.
+
+Также, в связи с языковыми и культурными различиями, случается, что какой-то термин из одного языка не имеет точного эквивалента в другом.
+Например, не имеет точного эквивалента в русском языке японский термин \begin{CJK*}{UTF8}{min}
+侘寂
+\end{CJK*}~(Wabi-Sabi), который означает {умение восхищаться чем-то несовершенным}.
+Или наоборот, русский <<кипяток>> нельзя перевести на английский одним словом.
+
+% Но даже если эквивалентный термин в другом языке существует, в силу различия выразительных способностей языков, может происходить потеря точности при переводе.
+% Если в русскоязычном тексте встретится предложение <<зеленая зелень зеленит зеленую зелень>>, его можно будет просто перевести на английский, как <<green green green green green>>.
+% С обратным же переводом возникнут проблемы.
 
 \subsection{Разметки текстов}
 
