--- a/docs/preamble.tex
+++ b/docs/preamble.tex
@@ -2,6 +2,7 @@
 \usepackage[T2A]{fontenc} % Поддержка русских букв
 \usepackage[utf8]{inputenc} % Кодировка utf8
 \usepackage[english,russian]{babel} % Языки: русский, английский
+\usepackage{CJKutf8}
 
 \usepackage[14pt]{extsizes}
 
