--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -4,11 +4,23 @@
     accessed = {01.03.2024},
 }
 
-@inbook{kl,
+@inbook{cl,
    bookauthor = {В.П. Захаров and С.Ю. Богданова},
    note = {Корпусная лингвистика: Учебник для студентов направления <<Лингвистика>>. 2-е изд., перераб. и дополн., -- СПб.: СПбГУ. РИО. Филологический факультет, 2013. -- 148 с.},
    isbn = {978-5-88267-316-0},
    language = {russian},
+}
+
+@misc{opencorpora,
+	etitle   = {OpenCorpora --- открытый корпус},
+	url      = {\url{https://opencorpora.org}},
+    accessed = {25.03.2024},
+}
+
+@misc{postnauka,
+	etitle   = {Параллельные корпусы текстов},
+	url      = {\url{https://postnauka.org/video/54851}},
+    accessed = {25.03.2024},
 }
 
 @article{realphong,
