--- a/docs/report/01-analytical.tex
+++ b/docs/report/01-analytical.tex
@@ -1,55 +1,30 @@
 \section{Аналитическая часть}
 
-В данной части вводятся понятия корпусов текстов и текстовых разметок.
-Анализируются основные виды текстовых корпусов, текстовых разметок и их структура.
-Описывается структура технических текстов, и рассматривается связанная с ними проблематика.
+В данной части будет идти речь о корпусах текстов, видах текстов и текстовых разметок. % XXX будет идти или идет?
 
 \subsection{Корпуса текстов}
 
-% По одному из определений, под корпусом текстов понимается большой унифицированный, структурированный, размеченный, филологически компетентный массив языковых данных, предназначенный для решения конкретных лингвистических задач \cite{kl}.
+Корпусная лингвистика --- раздел компьютерной лингвистики, занимающийся разработкой общих принципов построения и использования лингвистических корпусов (корпусов текстов) с применением компьютерных технологий.
+Под лингвистическим, или языковым, корпусом текстов понимается большой, представленный в машиночитаемом формате, унифицированный, структурированный, размеченный, филологически компетентный массив языковых данных, предназначенный для решения конкретных лингвистических задач. \cite[с. 5]{cl}
 
-% В данном разделе дается определение корпусу текстов, TODO
+\subsubsection{Виды}
 
-По Т. МакЭнери и Э. Вилсону, под корпусом текстов понимается {собрание языковых фрагментов, отобранных в соответствии с четкими языковыми критериями для использования в качестве модели языка} \cite{kl}.
+В таблице \ref{tab:coc} ниже представлена классификация корпусов по некоторым признакам.
 
-% Зачем нужны
-\subsubsection{Применения}
-
-Корпуса текстов используются для различных лингвистических, образовательных и технологических целей, например, для выявления закономерностей в языке, анализа структуры технических текстов, обработки естесственного языка, составления словарей или интерактивного обучения языку.
-
-% Корпуса текстов используются в различных сферах человеческой деятельности:
-% \begin{itemize}
-%     \item Лингвистика и языкознание;
-%     \item Машинный перевод;
-%     \item Разработка систем обработки естественного языка (англ. NLP, Natural Language Processing);
-%     \item Обучение языкам;
-%     \item Составление словарей;
-%     \item Социолингвистика.
-% \end{itemize}
-
-% Какими бывают
-\subsubsection{Типы и классификация}
-
-Различают несколько типов текстовых корпусов по степени <<универсальности>> \cite{kl}:
-\begin{enumerate}
-    \item корпусы первого типа --- универсальные, отражают в себе все многообразие речевой деятельности;
-    \item корпусы второго типа --- специфичные, создаваемые для специальной цели, отражают некоторое языковое или культурное явление в общественной речевой практике, например, корпус пословиц или анекдотов;
-    \item корпусы третьего типа --- специфичные, создаваемые для решения специальной задачи, например, для отладки систем машинного перевода.
-\end{enumerate}
-
-Текстовые корпуса различают и по другим признакам.
-Некоторые из них представлены ниже, в таблице \ref{tab:coc}.
 \begin{table}[H]
 \centering
-        \caption{Классификация корпусов \cite[с. 16]{kl}}
+        \caption{Классификация корпусов \cite[с. 16]{cl}}
 		\label{tab:coc}
-        \begin{adjustbox}{width=1\textwidth}
+        \begin{adjustbox}{width=\textwidth}
             \begin{tabular}{|p{0.3\textwidth}|p{0.7\textwidth}|}
         \hline
         Признак & Тип корпуса \\
         \hline
         \hline
         Цель & многоцелевые, специализированные \\
+        \hline
+        % Параллельность & одноязычные, двуязычные, многоязычные \\
+        Параллельность & параллельные, сопоставимые (псевдопараллельные) \\
         \hline
         Тип языковых данных & письменные, устные (речевые), смешанные \\
         \hline
@@ -59,49 +34,168 @@
         \hline
         Назначение & исследовательские, иллюстративные \\
         \hline
-        Динамичность & динамические, статические \\
-        \hline
+        % Динамичность & динамические, статические \\
+        % \hline
         Разметка & размеченные, неразмеченные \\
         \hline
         Характер разметки & морфологические, синтаксические, семантические, анафорические и т. д. \\
         \hline
-        Доступность & свободно доступные, коммерческие, закрытые \\
-        \hline
+        % Доступность & свободно доступные, коммерческие, закрытые \\
+        % \hline
         Объем текстов & полнотекстовые, <<фрагментнотекстовые>> \\
         \hline
 		\end{tabular}
         \end{adjustbox}
 \end{table}
 
-% Как устроены
+\newpage
+
+В данной работе особое внимание уделяется параллельным корпусам, так как именно для работы с таким видом корпусов будет разрабатываться база данных. % XXX meh, уделяется; будет разрабатываться
+
+% Параллельный корпус --- это двуязычный корпус, то есть текст оригинала и его перевод на какой-то другой язык, причем эти два текста не просто лежат рядом друг с другом, а должны быть выровнены: отдельные фрагменты оригинала должны совпадать с соответствующими фрагментами перевода. Именно это позволяет использовать параллельный корпус как инструмент исследования. 
+
+Параллельный корпус --- это двуязычный корпус.
+В нем хранится два множества текстов --- оригиналов и их переводов.
+Работа с корпусом (выравнивание, разметка, поиск) производится сразу с двумя текстами. %, ровно один из которых оригинальный.
+
+Для возможности использования параллельного корпуса в качестве инструмента исследования, тексты должны быть выровнены --- отдельные фрагменты оригинала должны совпадать с соответствующими фрагментами перевода \cite{postnauka}.
+
+Подробнее о применении, устройстве и проблематике параллельных корпусов будет говориться в следующих подразделах.
+
+\subsubsection{Применение}
+
+В данном подразделе рассматриваются некоторые применения параллельных корпусов.
+
+% 1) Машинный перевод
+% Параллельный корпус является важнейшей частью работы статистических систем машинного перевода, а также систем, работа которых основана на правилах.
+% Данные системы постоянно анализируют доступные тексты для вычисления наиболее вероятного перевода.
+% Кроме того, параллельный корпус используется и в новейшем методе машинного перевода с использованием глубокого обучения.
+
+% 2) Инструменты обработки естественного языка Некоторые инструменты NLP (аббр. Natural Language Processing) также зависят от параллельного
+% корпуса. Примерами таких инструментов являются программы для кросс-языкового извлечения данных (Cross Language Information Retrieval), транслитерации, систем ответы на вопросы (Question Answering Systems) и др.
+
+% 3) Языкознание Одно слово в языке может иметь множество значений в зависимости от контекста. Таким образом, параллельный корпус помогает в исследованиях влияния окружения на перевод слова на другой язык (при наличии достаточного количества загруженных текстов). С помощью корпуса выявляются характерные для языка паттерны использования конкретных слов, фраз. Кроме того, на основе текстов делаются выводы об особенностях морфологии, синтаксиса языков, а также вытекающих из них особенностях перевода. Самым ярким примером науки, которой необходим параллельный корпус, является контрастивная лингвистика.
+
+% 4) Работа переводчика или преподавателя В связи с множеством возможных переводов слова или фразы в зависимости от контекста, работа переводчика неразрывно связана с использованием лингвистических инструментов. Как правило, 50\% времени перевода - это использование справочных материалов. Использование параллельного корпуса призвано облегчить работу переводчика, поскольку корпус содержит множество примеров перевода слов, фраз и предложений в зависимости от контекста их употребление. Кроме того, корпус может помочь людям, изучающим иностранный язык.
+
+\subsubsection*{Машинный перевод}
+
+\blindtext
+
+\subsubsection*{Обработка естественного языка (NLP)}
+
+\blindtext
+
+\subsubsection*{Кросс-языковой поиск информации (CLIR)}
+
+\blindtext
+
+\subsubsection*{Разработка словарей и учебных материалов}
+
+\blindtext
+
+\subsubsection*{Лингвистические исследования}
+
+\blindtext
+
+% 1. Машинный перевод
+% 2. Сравнительный анализ языков
+% 3. Автоматическая обработка естественного языка (NLP)
+% 4. Кросс-языковой поиск информации (CLIR)
+% 5. Выявление и сопоставление терминов и специализированной лексики в различных языках.
+% 6. Лингвистические исследования
+% Изучение языкового варьирования и изменчивости: Анализ различий в использовании языка в разных культурных и социальных контекстах.
+% Контрастивная лингвистика: Сравнение языков на разных уровнях (фонетическом, морфологическом, синтаксическом, лексическом) для изучения языковых особенностей и взаимосвязей.
+% 5. Разработка лингвистических ресурсов
+% Создание двуязычных и многоязычных словарей: Использование параллельных текстов для составления словарных статей с примерами употребления слов и выражений в различных языках.
+% Разработка учебных материалов: Подготовка образовательных ресурсов для изучения иностранных языков, включая упражнения на перевод, сопоставление текстов и понимание лексических и грамматических структур.
+
 \subsubsection{Устройство}
+
+Параллельные корпуса устроены таким образом, чтобы решались поставленные перед ними задачи.
+Типичная задача параллельных корпусов включает в себя поиск по корпусу по словам или по тегам.
+
+Для осуществления поиска по корпусу, в нем должна храниться следующая информация:
+\begin{itemize}
+    \item тексты и их метаданные,
+    \item выравнивание,
+    \item теги и аннотации.
+\end{itemize}
+
+Теги и аннотации, наряду с выровненными текстами обычно [много ссылок] хранятся в формате XML.
+Но хранение информации в таком формате имеет ряд недостатков:
+\begin{itemize}
+    \item избыточность (хмл теги, дублирование информации)
+    \item долгий поиск (парсинг текстового файла, да ещё и хмл - с кучей лишней инфы в виде тегов)
+    \item большой размер (можно хранить ту же самую информацию в виде бинарного файла и экономить место)
+    \item TODO FIXME
+\end{itemize}
 
 \subsection{Тексты}
 
-% Виды текстовых разметок (?)
-\subsubsection{Виды текстовых разметок}
+В данном разделе будут рассмотрены основные виды текстовых разметок, структура технических текстов, а также будет описана проблема, возникающая при автоматическом выравнивании текстов на уровне терминов.
 
-% Структуру технических и проблемы в них
-\subsubsection{Структура технических текстов и проблемы}
+\subsubsection{Виды разметок}
 
-% Проблема терминов
+\subsubsection*{Морфологическая}
+
+\blindtext
+
+\subsubsection*{Синтаксическая}
+
+\blindtext
+
+\subsubsection*{Семантическая}
+
+\blindtext
+
+\subsubsection*{Метаразметка}
+
+\blindtext
+
+\subsubsection{Структура технических текстов}
+
 \subsubsection{Проблема терминов}
 
-Терминология русского языка складывалась и продолжает складываться на основе англоязычной терминологии.
-Иногда получается, что давно существующий в русском языке термин приобретает новое значение, заимствованное из английского.
-Так, например, слово <<корпус>> приобрело новое значение от английского <<corpus>> --- {сборник текстов} \cite{kl}.
-В связи с этим, при разметке текстов, возникают трудности при сопоставлении терминов из одного языка с терминами другого.
+Выравнивание текстов на уровне секций, абзацев и предложений обычно не представляет трудности, и часто такое выравнивание можно автоматизировать.
+Проблемы возникают при попытке выровнять тексты на уровне терминов.
+Автоматически такое выравнивание произвести бывает сложно.
+Причина сложности автоматического выравнивания на уровне терминов будет рассмотрена ниже на примере фразеологизмов.
 
-Также, в связи с языковыми и культурными различиями, случается, что какой-то термин из одного языка не имеет точного эквивалента в другом.
-Например, не имеет точного эквивалента в русском языке японский термин \begin{CJK*}{UTF8}{min}
-侘寂
-\end{CJK*}~(Wabi-Sabi), который означает {умение восхищаться чем-то несовершенным}.
-Или наоборот, русский <<кипяток>> нельзя перевести на английский одним словом.
+Набор слов в фразеологизмах может иметь разные значения в зависимости от контекста.
+Например, предложение <<It was a piece of cake>> нельзя перевести однозначно, не зная контекста, в котором оно употреблено.
 
-% Но даже если эквивалентный термин в другом языке существует, в силу различия выразительных способностей языков, может происходить потеря точности при переводе.
-% Если в русскоязычном тексте встретится предложение <<зеленая зелень зеленит зеленую зелень>>, его можно будет просто перевести на английский, как <<green green green green green>>.
-% С обратным же переводом возникнут проблемы.
+В контексте 
+\begin{itemize}
+    \item Was it difficult?
+    \item It was a piece of cake.
+\end{itemize}
+его можно перевести, как <<было просто>>, а в контексте
+\begin{itemize}
+    \item What was in the box?
+    \item It was a piece of cake.
+\end{itemize}
+оно точно имеет отношение к куску пирога.
 
-\subsection{Разметки текстов}
+Таким образом, для корректности перевода, машинный перевод должен учитывать контекст, в котором термин употреблен.
+Но это и есть одна из задач, для решения которой параллельные корпуса и создаются изначально.
+В этом и заключается проблема терминов.
 
-% \subsection{Вывод}
+% Терминология русского языка складывалась и продолжает складываться на основе англоязычной терминологии.
+% Иногда получается, что давно существующий в русском языке термин приобретает новое значение, заимствованное из английского.
+% Так, например, слово <<корпус>> приобрело новое значение от английского <<corpus>> --- {сборник текстов} \cite{cl}.
+% В связи с этим, при разметке текстов, возникают трудности при сопоставлении терминов из одного языка с терминами другого.
+
+% Также, в связи с языковыми и культурными различиями, случается, что какой-то термин из одного языка не имеет точного эквивалента в другом.
+% Например, не имеет точного эквивалента в русском языке японский термин \begin{CJK*}{UTF8}{min}
+% 侘寂
+% \end{CJK*}~(Wabi-Sabi), который означает {умение восхищаться чем-то несовершенным}.
+% Или наоборот, русский <<кипяток>> нельзя перевести на английский одним словом.
+
+% \subsection{Разметки}
+
+\subsection{Существующие параллельные корпуса}
+
+% XML - неэффективно
+
+\subsection{Вывод}
