tech text struct done?

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -23,12 +23,15 @@
     accessed = {25.03.2024},
 }
 
-@article{realphong,
-  author={Bui Tuong Phong},
-  title={Illumination for computer generated pictures},
-  year={1975},
-  journal={Communications of the ACM},
-  volume={18},
-  pages={311 - 317},
-  doi={10.1145/360825.360839},
+@article{tt,
+    title = {What is technical text?},
+    journal = {Language Sciences},
+    volume = {19},
+    number = {4},
+    pages = {391-423},
+    year = {1997},
+    issn = {0388-0001},
+    doi = {https://doi.org/10.1016/S0388-0001(97)00003-X},
+    url = {https://www.sciencedirect.com/science/article/pii/S038800019700003X},
+    author = {Terry Copeck and Ken Barker and Sylvain Delisle and Stan Szpakowicz and Jean-François Delannoy},
 }
