--- a/docs/report/01-analytical.tex
+++ b/docs/report/01-analytical.tex
@@ -153,7 +153,45 @@
 
 \blindtext
 
-\subsubsection{Структура технических текстов}
+\subsubsection{Технические тексты и их структура}
+
+Когда кто-то называет текст <<техническим>> в повседневной жизни, под этим обычно понимается сложность его восприятия.
+% FIXME too long
+В ученых кругах --- наоборот, <<техничность>> текста означает б\textbf{о}льшую доступность его обработки вследствие лишенности фигуративного языка, минимального использования переносных значений слов и возможности понимать его содержимое в буквальном смысле. \cite{tt}
+
+Но четкого и общепринятого определения у понятия <<технический текст>> нет.
+
+Тем не менее, у людей есть общее представление о том, какой текст является техническим, а какой --- нет.
+
+% FIXME too long
+Исходя из предположения о том, что среднестатистический человек способен оценивать <<техничность>> текста, исследование \cite{tt}, включало проведение массового опроса участников, в результате которого были выделены критерии, значения которых обычно выше у технических текстов.
+
+У технических текстов преобладают следующие критерии:
+\begin{itemize}
+    \item наличие заголовков,
+    \item определение темы и фокусировка на ней,
+    \item предоставление знаний,
+    \item серьезность и объективность,
+    \item логичность и последовательность,
+    \item иерархическая организация,
+    \item использование специализированной терминологии.
+\end{itemize}
+
+Проанализировав ряд текстов на предмет их соответствия указанным выше критериям, становится возможным выявить структуру, характерную техническим текстам, а именно:
+\begin{enumerate}
+    \item Резюме, аннотация --- краткое описание содержания текста.
+    \item Введение --- знакомство с проблемой.
+    \item Теоретическая часть --- более глубокое знакомство с проблемой, знакомство читателя с методологией исследования и обоснованный выбор методов, которые будут использоваться в ходе исследования.
+    \item Методология --- описание применения выбранных методов в ходе исследования.
+    \item Результаты --- представление полученных результатов.
+    \item Обсуждение и анализ результатов.
+    \item Заключение.
+\end{enumerate}
+
+
+
+
+
 
 \subsubsection{Проблема терминов}
 
