more stuff done

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -32,6 +32,6 @@
     year = {1997},
     issn = {0388-0001},
     doi = {https://doi.org/10.1016/S0388-0001(97)00003-X},
-    url = {https://www.sciencedirect.com/science/article/pii/S038800019700003X},
+    url = {\url{https://www.sciencedirect.com/science/article/pii/S038800019700003X}},
     author = {Terry Copeck and Ken Barker and Sylvain Delisle and Stan Szpakowicz and Jean-François Delannoy},
 }
