--- a/docs/report/01-analytical.tex
+++ b/docs/report/01-analytical.tex
@@ -80,23 +80,30 @@
 
 \subsubsection*{Машинный перевод}
 
-\blindtext
+Машинный перевод (MT) представляет собой процесс перевода с одного естественного языка на другой с использованием компьютеров.
+Параллельные корпусы используются, как правило, для систем статистического машинного перевода, принцип работы которого заключается в анализе больших массивов параллельных текстов и в выборе для перевода наиболее часто встречающихся вариантов.
 
-\subsubsection*{Обработка естественного языка (NLP)}
+% \subsubsection*{Обработка естественного языка (NLP)}
 
-\blindtext
+% \blindtext
 
 \subsubsection*{Кросс-языковой поиск информации (CLIR)}
 
-\blindtext
+% \blindtext
+Параллельные корпуса могут использоваться для обучения моделей, способных искать информацию на одном языке и предоставлять информацию на другом.
 
 \subsubsection*{Разработка словарей и учебных материалов}
 
-\blindtext
+% \blindtext
+
+Параллельные корпуса могут использоваться при разработке словарей и учебных материалов, например, для создания примеров употребления слов в контексте.
 
 \subsubsection*{Лингвистические исследования}
 
-\blindtext
+В лингвистических исследованиях параллельные корпуса могут использоваться для подсчета частот встречаемости различных языковых элементов.
+Статистическими методами на материале корпуса можно определить, какие слова регулярно встречаются вместе и, таким образом, могут быть отнесены к устойчивым словосочетаниям. \cite[с. 81]{cl}
+
+% \blindtext
 
 % 1. Машинный перевод
 % 2. Сравнительный анализ языков
@@ -133,25 +140,66 @@
 
 \subsection{Тексты}
 
-В данном разделе будут рассмотрены основные виды текстовых разметок, структура технических текстов, а также будет описана проблема, возникающая при автоматическом выравнивании текстов на уровне терминов.
+% FIXME future -> present
+В данном разделе будут рассмотрены виды текстовых разметок и структура технических текстов, а также будет описана проблема, возникающая при автоматическом выравнивании текстов на уровне терминов.
 
 \subsubsection{Виды разметок}
 
+В данном подразделе описаны некоторые виды текстовых разметок.
+
 \subsubsection*{Морфологическая}
 
-\blindtext
+Представление в корпусе информации о морфологических формах и значениях (часть речи, род, падеж, вид...) является самостоятельной научной проблемой. \cite{ruscorpora}
+
+В национальном корпусе русского языка \cite{ruscorpora} морфологическая информация, приписываемая произвольной словоформе в тексте, содержательно делится на четыре типа информации:
+\begin{enumerate}
+    \item Лексема (лемма), которой принадлежит словоформа (указывается «словарная запись» данной лексемы и ее принадлежность к той или иной части речи).
+    \item Множество грамматических признаков данной лексемы, или словоклассифицирующие характеристики (например, род для существительного, переходность для глагола).
+    \item Множество грамматических признаков данной словоформы, или словоизменительные характеристики (например, падеж для существительного, число для глагола).
+    \item Информация о нестандартности грамматической формы, орфографических искажениях и т. п.
+\end{enumerate}
+
+Примеры тегов морфологической аннотации в НКРЯ \cite{ruscorpora}:
+\begin{itemize}
+    \item S	--- существительное (яблоня, лошадь, корпус, вечность);
+    \item A	--- прилагательное (коричневый, таинственный, морской);
+    \item NUM --- числительное (четыре, десять, много);
+    \item m	--- мужской род (работник, стол);
+    % \item f	--- женский род (работница, табуретка);
+    \item anim --- одушевленность (человек, ангел, утопленник);
+    % \item inan --- неодушевленность (рука, облако, культура);
+    \item sg --- единственное число (яблоко, гордость);
+    % \item pl --- множественное число (яблоки, ножницы, детишки);
+    \item nom --- именительный падеж (голова, сын, степь, сани, который);
+    % \item gen --- родительный падеж (головы, сына, степи, саней, которого);
+    % \item dat --- дательный падеж (голове, сыну, степи, саням, которому);
+    \item persn	--- личное имя (Иван, Дарья, Леопольд, Эстер, Гомер, Маугли).
+\end{itemize}
 
 \subsubsection*{Синтаксическая}
 
-\blindtext
+Синтаксическую структуру предложения можно представить в виде дерева зависимостей, в котором каждая дуга (стрелка) идет из главного слова (<<хозяина>>) в зависимое слово (<<слугу>>) и помечена именем определенного синтаксического отношения.
+Каждое слово предложения, кроме одного (называемого вершиной предложения), зависит только от одного хозяина и только по одному из синтаксических отношений.
+Отношения связывают отдельные слова, а не словосочетания (за исключением специальных случаев).
+В синтаксических группах (например, в сочиненной именной группе или придаточной клаузе) один из членов группы выступает в качестве представителя группы во внешних связях, объявляется вершиной группы, а остальные члены группы синтаксически зависят от него. \cite{ruscorpora}
+
+На рисунке ниже представлена синтаксическая разметка в двух форматах --- в формате универсальных зависимостей (UD) и в формате СинТагРус.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.9\textwidth]{img/syntax.png}
+	\caption{Разметка предложения в формате UD (сверху) и СинТагРус (снизу). Стрелки отношений в сочиненной группе выделены. Функциональные отношения UD обозначены пунктирными стрелками.}
+	\label{fig:syn}
+\end{figure}
 
 \subsubsection*{Семантическая}
 
-\blindtext
+При семантической разметке большинству слов в тексте приписывается один или несколько семантических и словообразовательных признаков, например, 'лицо', 'вещество', 'пространство', 'скорость', 'движение', 'обладание', 'свойство человека', 'диминутив', 'отглагольное имя' и т. п.
+В национальном корпусе русского языка \cite{ruscorpora} используется фасетная классификация, при которой одно слово может попадать в несколько классов.
 
 \subsubsection*{Метаразметка}
 
-\blindtext
+Под метаразметкой понимается приписывание тексту атрибутов, характеризующих обстоятельства его создания, автора, тематику, жанровые особенности и др. \cite{ruscorpora}
 
 \subsubsection{Технические тексты и их структура}
 
