how i want a drink alcololic of course after the heavy lectures involving quantum mechanics

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -23,6 +23,7 @@
     accessed = {25.03.2024},
 }
 
+
 @article{tt,
     title = {What is technical text?},
     journal = {Language Sciences},
@@ -34,4 +35,15 @@
     doi = {https://doi.org/10.1016/S0388-0001(97)00003-X},
     url = {\url{https://www.sciencedirect.com/science/article/pii/S038800019700003X}},
     author = {Terry Copeck and Ken Barker and Sylvain Delisle and Stan Szpakowicz and Jean-François Delannoy},
+}
+
+@article{survey,
+    author = {Khosla, Sonal},
+    year = 2018,
+    month = 08,
+    pages = {13-19},
+    title = {A SURVEY REPORT ON THE EXISTING METHODS OF BUILDING A PARALLEL CORPUS},
+    volume = 9,
+    journal = {International Journal of Advanced Research in Computer Science},
+    doi = {10.26483/ijarcs.v9i4.6171}
 }
