--- a/docs/report/01-analytical.tex
+++ b/docs/report/01-analytical.tex
@@ -129,13 +129,12 @@
     \item теги и аннотации.
 \end{itemize}
 
-Теги и аннотации, наряду с выровненными текстами обычно [много ссылок] хранятся в формате XML.
+Теги и аннотации, наряду с выровненными текстами обычно \cite{cl, survey, ruscorpora, opencorpora} хранятся в формате XML.
 Но хранение информации в таком формате имеет ряд недостатков:
 \begin{itemize}
-    \item избыточность (хмл теги, дублирование информации)
-    \item долгий поиск (парсинг текстового файла, да ещё и хмл - с кучей лишней инфы в виде тегов)
-    \item большой размер (можно хранить ту же самую информацию в виде бинарного файла и экономить место)
-    \item TODO FIXME
+    \item Использование XML-тегов приводит к увеличению размера файлов и дублированию информации;
+    \item Поиск по текстовым файлам зачастую медленнее поиска по бинарным, особенно при большом количестве хранимой информации;
+    \item Ту же самую информацию можно хранить в виде бинарных файлов, используя при этом меньше места.
 \end{itemize}
 
 \subsection{Тексты}
@@ -236,11 +235,6 @@
     \item Заключение.
 \end{enumerate}
 
-
-
-
-
-
 \subsubsection{Проблема терминов}
 
 Выравнивание текстов на уровне секций, абзацев и предложений обычно не представляет трудности, и часто такое выравнивание можно автоматизировать.
@@ -280,8 +274,12 @@
 
 % \subsection{Разметки}
 
-\subsection{Существующие параллельные корпуса}
+% \subsection{Существующие параллельные корпуса}
 
-% XML - неэффективно
+% TODO: Надо ли описывать 3-4 существующих параллельных корпуса, делать сравнительную таблицу по критериям:
+% - Способ хранения текстов и разметки
+% - Возможность загрузки собственных текстов
+% - Возможность разметки собственных текстов
+% и подводить к актуальности разработки БД?
 
 \subsection{Вывод}
