--- a/docs/report/01-analytical.tex
+++ b/docs/report/01-analytical.tex
@@ -239,3 +239,5 @@
 % и подводить к актуальности разработки БД?
 
 \subsection{Вывод}
+
+В данной части была рассмотрена предметная область параллельных корпусов текстов, были описаны виды текстовых разметок, структура технический текстов и проблема, возникающая при попытке автоматизации выравнивания текстов на уровне терминов.
